MAINT-2824 BREAKING CHANGE: Fix $lookup response to specify property names as valueCodes rather than valueStrings