@@ -50,7 +50,6 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.web.bind.annotation.RequestMethod;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
@@ -201,7 +200,7 @@ public class FHIRCodeSystemProvider implements IResourceProvider, FHIRConstants 
 		return concat(concat(snomedCodeSystemStream, fhirCodeSystemStream), snomedPostcoordinatedStream)
 				.filter(cs -> csFilter.apply(cs, fhirHelper))
 				.sorted(chainedComparator)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Read
@@ -416,7 +415,6 @@ public class FHIRCodeSystemProvider implements IResourceProvider, FHIRConstants 
 
 		notSupported("codeSystem", codeSystem);
 		notSupported("date", date);
-		//notSupported("displayLanguage", displayLanguage);
 		mutuallyExclusive("code", code, "coding", coding);
 		mutuallyRequired("display", display, "code", code, "coding", coding);
 		if (request.getMethod().equals(RequestMethod.POST.name())) {
@@ -584,8 +582,6 @@ public class FHIRCodeSystemProvider implements IResourceProvider, FHIRConstants 
 			throw exception("Uploading a SNOMED-CT code system using the FHIR API is not supported. " +
 					"Please use the Snowstorm native API to manage SNOMED-CT code systems.", IssueType.NOTSUPPORTED, 400);
 		}
-
-		FhirContext fhirContext = fhirHelper.getFhirContext();
 
 		TerminologyUploaderProvider uploaderProvider = new TerminologyUploaderProvider(fhirContext,
 				TermLoaderSvcImpl.withoutProxyCheck(new TermDeferredStorageSvc(), termCodeSystemStorage));
